fixing weird hamburger error on mobile

--- a/styles.css
+++ b/styles.css
@@ -267,6 +267,7 @@ h2 {
 
 .hamburger-menu-container {
     display: none;
+    z-index: -1;
     background-color: rgba(255, 255, 255, .99);
     opacity: .9;
     font-size: 2.2rem;
@@ -301,6 +302,7 @@ a.hamburger-nav:hover {
 
 .expand {
     opacity: .9;
+    z-index: 1;
 }
 
 .mobile-alt-image {
